--- a/Tic-Tac-Toe.html
+++ b/Tic-Tac-Toe.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tic-Tac-Toe game</title>
+    <!--Writing Internal Css inside <style></style> tags-->
     <style>
         table,td{
             width:30lvw;
@@ -63,6 +64,7 @@
     <div class="resetter">
         <button type="reset" id="reset">Reset</button>
     </div>
+    <!--Javascript code to add the functionality,written inside <script></script> tags-->
     <script>
         //confirm("start your game now");
         var mat=[[null,null,null],[null,null,null],[null,null,null]]
